--- a/lab1/music/lessons.html
+++ b/lab1/music/lessons.html
@@ -7,6 +7,7 @@
 <head>
 	<title>Lessons</title>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Added viewport meta tag -->
 	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -41,7 +42,7 @@
 		<div id="piano">
 			<h3>Piano Lessons</h3>
 			<img src="images/piano-lesson.jpg" alt="piano teacher and student
-			sitting at a piano">
+			sitting at a piano" class="round">
 			<p>We offer piano lessons for all ages, beginning at age three.
 			Whether you are a beginner or have been playing the piano for a while,
 			we have a program to suit your needs. Learn new techniques, theory,
@@ -52,7 +53,7 @@
 		<div id="guitar">
 			<h3>Guitar Lessons</h3>
 			<img src="images/child-guitar.jpg" alt="child with a smile holding a
-			guitar">
+			guitar" class="round">
 			<p>We teach acoustic guitar, electric guitar, bass guitar, and
 			ukulele. We have guitar lessons for beginners, intermediate players,
 			and advanced players. Improve your skills with weekly lessons. Learn
@@ -62,7 +63,7 @@
 		
 		<div id="violin">
 			<h3>Violin Lessons</h3>
-			<img src="images/woman-violin.jpg" alt="woman playing the violin">
+			<img src="images/woman-violin.jpg" alt="woman playing the violin" class="round">
 			<p>We offer violin lessons for all ages, beginning at age six. Our
 			violin lessons include a variety of music styles, from fiddle to
 			classical. Our instructors will help you fine-tune techniques and
@@ -72,4 +73,8 @@
 	</main>
 	
 	<footer>
-		<p>&copy; Copyright 
+		<p>&copy; Copyright
+	</footer>
+
+</body>
+</html>
