--- a/lab1/music/template.html
+++ b/lab1/music/template.html
@@ -7,7 +7,10 @@
 <head>
 	<title>Template</title>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Added viewport meta tag -->
 	<link rel="stylesheet" href="css/styles.css">
+	<!-- Added Google Fonts link for DM Serif Display and Roboto -->
+	<link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:wght@400&family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
 
